# project_x

./: .env.example  .gitignore  hello.py  instructions_2.md  pyproject.toml
app/: config.py  database.py
app/modeles/: consultation.py  document.py  user.py
tests/: test_gpt5_api.py
