[project]
name = "fastapi-medical-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "chromadb>=1.5.6",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pypdf>=6.9.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.24",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
]
